src/instructions/snapshots/osrm_model_extensions__instructions__banner_instruction__tests__banner_arrival.snap
---
source: src/instructions/banner_instruction.rs
expression: factory.build()
---
[
  {
    "distanceAlongGeometry": 0.0,
    "primary": {
      "text": "Arrive",
      "type": "arrive",
      "components": [
        {
          "text": "Arrive",
          "type": "text"
        }
      ]
    }
  }
]
